--- a/composer.json
+++ b/composer.json
@@ -5,12 +5,14 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "^7.3|^8.0",
+        "php": "^8.0",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "intervention/image": "^2.7",
         "laravel/framework": "^8.54",
         "laravel/sanctum": "^2.12",
         "laravel/tinker": "^2.5",
+        "owen-it/laravel-auditing": "^12.0",
         "spatie/laravel-permission": "^5.1"
     },
     "require-dev": {
